[gd_scene load_steps=20 format=3 uid="uid://i2ij16lpnsna"]

[ext_resource type="Texture2D" uid="uid://dfjbabyxap7va" path="res://tileset_road.png" id="1_a32s3"]
[ext_resource type="Texture2D" uid="uid://c0t8ru26drj3g" path="res://tileset_zones.png" id="2_81xvy"]
[ext_resource type="Texture2D" uid="uid://b84e2mpksodpj" path="res://tile_selector.png" id="2_mh2vv"]
[ext_resource type="Script" path="res://region_map.gd" id="2_x62fd"]
[ext_resource type="Script" path="res://tile_selector.gd" id="3_gqx8n"]
[ext_resource type="Texture2D" uid="uid://cxjs8pkpc1r5s" path="res://tileset_ploppables.png" id="3_j6xay"]
[ext_resource type="PackedScene" uid="uid://baqytnf6w8p5" path="res://construction_overlay.tscn" id="4_jg55x"]
[ext_resource type="Script" path="res://region_map_layer.gd" id="5_20hew"]
[ext_resource type="Texture2D" uid="uid://dg8josl58bmev" path="res://tileset_busstops.png" id="7_bnmh3"]
[ext_resource type="Texture2D" uid="uid://d4mqy8s2mhy2" path="res://tileset_lines.png" id="7_grl0l"]
[ext_resource type="Script" path="res://power_line_layer.gd" id="8_7kvib"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8ehk2"]
texture = ExtResource("1_a32s3")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
0:0/0/custom_data_0 = 4
1:0/0 = 0
1:0/0/custom_data_0 = 4
2:0/0 = 0
2:0/0/custom_data_0 = 4
3:0/0 = 0
3:0/0/custom_data_0 = 4
0:1/0 = 0
0:1/0/custom_data_0 = 4
1:1/0 = 0
1:1/0/custom_data_0 = 4
2:1/0 = 0
2:1/0/custom_data_0 = 4
3:1/0 = 0
3:1/0/custom_data_0 = 4
0:2/0 = 0
0:2/0/custom_data_0 = 4
1:2/0 = 0
1:2/0/custom_data_0 = 4
2:2/0 = 0
2:2/0/custom_data_0 = 4
3:2/0 = 0
3:2/0/custom_data_0 = 4

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q0cki"]
texture = ExtResource("2_81xvy")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
0:0/0/custom_data_0 = 6
1:0/0 = 0
1:0/0/custom_data_0 = 6
0:1/0 = 0
0:1/0/custom_data_0 = 7
1:1/0 = 0
1:1/0/custom_data_0 = 7
0:2/0 = 0
0:2/0/custom_data_0 = 8
1:2/0 = 0
1:2/0/custom_data_0 = 8
0:3/0 = 0
0:3/0/custom_data_0 = 9
1:3/0 = 0
1:3/0/custom_data_0 = 9

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2es2m"]
texture = ExtResource("3_j6xay")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
0:0/0/custom_data_0 = 1
0:1/0 = 0
0:1/0/custom_data_0 = 3
0:2/0 = 0
0:2/0/custom_data_0 = 11
0:3/0 = 0
0:3/0/custom_data_0 = 12
0:4/0 = 0
0:4/0/custom_data_0 = 13
0:5/0 = 0
0:5/0/custom_data_0 = 14
0:6/0 = 0
0:6/0/custom_data_0 = 15

[sub_resource type="TileSet" id="TileSet_th2tf"]
tile_size = Vector2i(24, 24)
custom_data_layer_0/name = "tile_type"
custom_data_layer_0/type = 2
sources/0 = SubResource("TileSetAtlasSource_8ehk2")
sources/1 = SubResource("TileSetAtlasSource_q0cki")
sources/2 = SubResource("TileSetAtlasSource_2es2m")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_poqsw"]
texture = ExtResource("7_bnmh3")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_6r57v"]
tile_size = Vector2i(24, 24)
sources/0 = SubResource("TileSetAtlasSource_poqsw")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nvre4"]
texture = ExtResource("7_grl0l")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
0:6/0 = 0
2:7/0 = 0
3:7/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:5/0 = 0
3:6/0 = 0
2:6/0 = 0
1:6/0 = 0
1:1/0 = 0
2:1/0 = 0
0:7/0 = 0
1:7/0 = 0

[sub_resource type="TileSet" id="TileSet_jield"]
tile_size = Vector2i(24, 24)
sources/0 = SubResource("TileSetAtlasSource_nvre4")

[node name="RegionMap" type="Node2D"]
position = Vector2(96, 48)
script = ExtResource("2_x62fd")
construction_scene = ExtResource("4_jg55x")

[node name="RegionMapLayer" type="TileMapLayer" parent="."]
use_parent_material = true
tile_set = SubResource("TileSet_th2tf")
rendering_quadrant_size = 24
script = ExtResource("5_20hew")

[node name="BusStopLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_6r57v")

[node name="PowerLineLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_jield")
script = ExtResource("8_7kvib")

[node name="TileSelector" type="Sprite2D" parent="."]
texture = ExtResource("2_mh2vv")
centered = false
script = ExtResource("3_gqx8n")
